# ai-agent

./: .gitignore  2  LICENSE  config.py  main.py  prompts.py  pyproject.toml  settings.json  settings.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file_content.py
.github/workflows/: build.yml
calculator/: tests.py
functions/: call_functions.py  get_file_content.py  get_files_info.py  ollama.py  run_python_file.py  security.py  utils.py  write_file_content.py
main.dist/: libssl.so.3  libuuid.so.1
tests/API_tests/: test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file_content.py
tests/ollama_tests/: test_get_models.py  test_ollama.py
